# metalearning_benchmarks

./: .gitignore  readme.md  setup.cfg
scripts/: metalearning_dataset_demo.ipynb  plot_1d_benchmark.py
src/metalearning_benchmarks/: __init__.py  affine1d_benchmark.py  base_benchmark.py  base_parametric_benchmark.py  branin2d_benchmark.py  forrester1d_benchmark.py  furuta_benchmark.py  gp_benchmark.py  hartmann3d_benchmark.py  image_completion_benchmark.py  line_sine1d_benchmark.py  linear1d_benchmark.py  list_of_tasks_benchmark.py  metalearning_benchmark.py  metalearning_dataset.py  mnist_benchmark.py  parametric_benchmark.py  polynomial_benchmark.py  quadratic1d_benchmark.py  quadratic3d_benchmark.py  random_benchmark.py  sinusoid1d_benchmark.py  sinusoid_benchmark.py  ssgp_benchmark.py  util.py
tests/: test_benchmarks.py  test_import.py
