[metadata]
name = metalearning_benchmarks 
description = A collection of simple regression tasks for meta learning.
author = Michael Volpp
license =  AGPL-3.0
license_file = LICENSE
platforms = linux, osx
version = 0.0.1
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = 
    >=3.7
install_requires =
    numpy>=1.21
    scipy>=1.7
    tqdm
package_dir =
    = src
packages =
    metalearning_benchmarks

[options.extras_require] =
    dev = black; pytest
    demo = matplotlib>=3.5
